# PRS

./: .gitattributes  .gitignore  LICENSE  README.md  RENAME_LOG.md  build_missing_datasets.py  pyproject.toml  requirements.txt
bundles/: README.md
configs/: ase_models.yaml  default.yaml  panda_models.yaml  tokur_benchmark.yaml
data/: README.md  examples.jsonl
paper/: EXPERIMENT_PLAN.md  METHOD.md  README.md  appendix_random300_qwen_3b_7b.md  todolist.tex
scripts/: _rename_ase_to_core.py  _rename_to_panda.py  activate_env.sh  aggregate_fair_baselines.py  aggregate_four_model_tables.py  aggregate_maintable.sh  aggregate_math_strict.py  aggregate_panda_v2.py  aggregate_prs_v2.py  analyze_bd0_subset.py  analyze_mechanism.py  analyze_proc_token_bd.py  analyze_process_token_features.py  analyze_t_commit_split.py  ase_gpu_lock.sh  bundle_data.sh  check_math_complete.sh  check_metrics_readiness.py  clean_api_variants.sh  compute_ablation_macro.py  download_llama31_8b.sh  download_logic_code_datasets.sh  download_panda_models.sh  download_prs_models.sh  download_tokur_datasets.sh  env.sh  extract_bundles.sh  fast_four_model_tables.sh  fix_logic_extraction.py  generate_api_variants.sh  launch_ase_full_8gpu.sh  launch_official_tokur_all.sh  launch_panda_full_8gpu.sh  mine_process_signals.py  panda_gpu_lock.sh  plot_sc_vs_panda_collapse.py  push_to_github.sh  queue_all_four_models.sh  queue_ase_extra_models.sh  queue_panda_extra_models.sh  (+44 more)
tests/: test_ablation_recompute.py  test_advw_ase.py  test_advw_panda.py  test_baselines.py  test_logic_code_loaders.py  test_panda.py  (+6 more)
(+386 files in other folders)
